# Cuda_Vector_Addition_Extra

./: CMakeLists.txt  README.md  flops.py  plotter.py
doc/: Lab_2_Hello_Vector.odt  Lab_3_More_Vector_Addition_on_GPU.odt
results/: results_n_4096.txt  results_n_720.txt
results/global/: 0_20971521_1_1.txt  1_20971521_8_16.txt  2_20971521_32768_1.txt  3_20971521_32768_1024.txt  4_16777216_32768_1024.txt  all_configs_wo_profiler.txt  all_configs_wo_profiler_flops.txt
results/global_extra/: 0_1000000_1000_1000.txt  1_2000000_1024_1024.txt  2_3000000_1024_1000.txt  3_4000000_32_1000.txt  4_5000000_2048_1024.txt  all_configs_wo_profiler.txt  all_configs_wo_profiler_flops.txt
results/parsed/: blocks.txt  cuda_calc_time.txt  cuda_transfer_to_device.txt  cuda_transfer_to_host.txt  dimension.txt  results.csv  sequential_time.txt  threads.txt
results/registers/: 0_20971521_1_1.txt  1_20971521_8_16.txt  2_20971521_32768_1.txt  3_20971521_32768_1024.txt  4_16777216_32768_1024.txt  all_configs_wo_profiler.txt  all_configs_wo_profiler_flops.txt
src/: vec_addition_global.cu  vec_addition_registers.cu  vec_addition_shared_deprecated.cu
test/: auto_tester_4096.sh  auto_tester_720.sh  tester_global.sh  tester_global_extra.sh  tester_registers.sh
